--- a/formily-basic/src/main/resources/application.properties
+++ b/formily-basic/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # 服务器配置
 server.port=8080
-server.servlet.context-path=/
+server.servlet.context-path=/formily
 
 # Spring配置
 spring.application.name=formily-basic
