--- a/formily-web/package.json
+++ b/formily-web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formily/core": "^2.3.7",
     "@formily/vue": "^2.3.7",
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.2",
     "element-plus": "^2.13.1",
     "vue": "^3.5.24",
